[package]
name = "reflog-proto"
version = "0.1.0"
edition = "2021"
description = "Shared protobuf definitions and schema utilities for reflog"
license = "MIT"

[dependencies]
tonic = "0.11"
prost = "0.12"
serde_json = "1.0"
base64 = { version = "0.21", features = ["alloc"] }
nom = "7"

[build-dependencies]
tonic-build = "0.11"
