[package]
name = "reflog-proto"
version = "0.1.0"
edition = "2021"
description = "Shared protobuf definitions and schema utilities for reflog"
license = "MIT"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
protox = "0.9"
serde_json = "1.0"

[build-dependencies]
tonic-prost-build = "0.14"
